2010-07-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/i386/efi/grub-install.in: Revert to platform-specific behaviour
	with -p "".
	Reported by: Tito Keitel.

2010-07-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Naming convention): Document new naming convention.

2010-07-20  Vadim Solomin  <vadic052@gmail.com>
2010-07-20  Colin Watson  <cjwatson@ubuntu.com>

	Generate device.map in something closer to the old ordering.

	* util/deviceiter.c (struct device): New declaration.
	(compare_file_names): Rename to ...
	(compare_devices): ... this.  Sort by kernel name in preference to
	the stable by-id name, but keep the latter as a fallback comparison.
	Update header comment.
	(grub_util_iterate_devices) [__linux__]: Construct and sort an array
	of `struct device' rather than of plain file names.

2010-07-20  Thomas Frauendorfer  <Thomas.Frauendorfer@googlemail.com>

	* lib/i386/relocator_asm.S [! __x86_64__]: Don't try to disable amd64
	on i386.

2010-07-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* commands/acpi.c (setup_common_tables): Use sizeof instead of
	hardcoding size.
	(setv1table): Likewise.

2010-07-20  Colin Watson  <cjwatson@ubuntu.com>

	* disk/raid.c (insert_array): Use md/%s to name mdadm 1.x devices,
	removing the homehost if present.
	* kern/emu/getroot.c (get_mdadm_name) [__linux__]: New function.
	(grub_util_get_grub_dev): Use md/%s to name mdadm 1.x devices,
	removing the homehost if present.
	(grub_util_get_grub_dev) [__linux__]: Get the array name from mdadm
	if possible.
	* util/i386/pc/grub-setup.c (main): Handle md/* devices.

	* disk/dmraid_nvidia.c (grub_dmraid_nv_detect): Add start_sector
	parameter.  Set its pointer target to 0.
	* disk/mdraid_linux.c (grub_mdraid_detect): Add start_sector
	parameter.  Set its pointer target to 0 for 0.9 metadata, or to the
	`data_offset' value from the superblock for 1.x metadata.
	* disk/raid.c (grub_raid_read): Offset reads by the start sector of
	data on the device.