@@ -1,5 +1,13 @@
 2010-07-20  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* disk/loopback.c (grub_loopback): Replace filename with file.
+	(delete_loopback): Handle new semantics.
+	(grub_cmd_loopback): Likewise.
+	(grub_loopback_iterate): Likewise.
+	(grub_loopback_close): Likewise.
+
+2010-07-20  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* util/i386/efi/grub-install.in: Revert to platform-specific behaviour
 	with -p "".
 	Reported by: Tito Keitel.
